[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pstruc"
version = "attr: pstruc.version.__version__"
description = "Get a project file structure to analyze it"
readme = "README.md"
authors = [{name = "Ignacio Rigoni"}]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "colorama>=0.4.6",
    "PyYAML>=6.0.1"
]
requires-python = ">=3.11.0"

[project.urls]
homepage = "https://github.com/nachokhan/pstruc"
