[metadata]
name = pstruc
author = Ignacio Rigoni
description = Get a project file structure to analyze it
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nachokhan/pstruc
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    colorama
    PyYAML
python_requires = >=3.11.0
include_package_data = True

[options.entry_points]
console_scripts =
    pstruc = pstruc.pstruc:main

[options.extras_require]
dev = 
    pytest
